# tictactoe-global-multiplayer

./: CMakeLists.txt  tictactoe.cpp
.github/workflows/: windows-build.yml
TicTacToe_Client/: CMakeLists.txt  tictactoe.cpp
TicTacToe_Client/.github/worflows/: windows-build.yml
TicTacToe_Server/: CMakeLists.txt  server.cpp
